Mon Mar 16 18:42:22 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/analyticsTracking.php:
        * docs/Download.html:
          Added tracking

Mon Mar 16 13:01:22 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Asynch_IO.h:
        * ace/Based_Pointer_Repository.h:
          Added private copy constructor/assignment operator to prevent
          making a copy which leads to a double delete

Mon Mar 16 12:29:22 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Configuration.cpp:
        * ace/System_Time.cpp:
          Initialise pointers with 0

        * ace/MEM_Acceptor.h:
          Doxygen fix

        * ace/Monitor_Control_Types.cpp (operator=):
          Check for self assignment

        * ace/Name_Space.cpp:
        * ace/Name_Space.h:
          Let operator= return a value

        * ace/SOCK.h:
          Layout change

        * ace/UUID.cpp:
          Simplified operator=

Sun Mar 15 18:44:22 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * rpmbuild/ace-tao-ciao.spec:
          Removed workarounds for TAO_IDL lib version numbers

Sat Mar 14 22:05:15 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/config-lynxos.h:
          Updated for LynxOS 5.0

Fri Mar 13 19:21:54 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * rpmbuild/ace-tao-ciao.spec:
          Removed checks for OS version, we now use the gcc version

Fri Mar 13 08:16:54 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/diff-builds-and-group-fixed-tests-only.sh:
          Check also the lst files in the TAO_ROOT/bin and CIAO_ROOT/bin
          directory.

        * ace/MEM_Connector.h
        * ace/SOCK_Connector.h
        * ace/SOCK_SEQPACK_Connector.h
        * ace/SSL/SSL_SOCK_Connector.h
          Fixed typo in comment

Mon Mar  9 13:39:08 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/*:
          Moved all TAO and CIAO files to TAO_ROOT/etc and CIAO_ROOT/etc
