@@ -1,3 +1,9 @@
+Mon Mar 16 19:35:53 UTC 2009  Marcel Smit  <msmit@remedy.nl>
+
+        * ace/Service_Gestalt.cpp:
+          Applied patch attached to Bugzilla 3618.
+          Fixed Bugzilla 3618.
+
 Mon Mar 16 18:42:22 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * docs/analyticsTracking.php:
